# GpuMonitor

./: .gitignore  CMakeLists.txt  README.md  amd.c  library.c  library.h
.github/workflows/: build_library.yml  main.yml
amd/: ROCMconfig.cmake  processor_info.c  rocm_smi.h  vram_info.c
nvidia/: cuda_info.c  nvidia_gpu.c  processor_info.c  vram_info.c
